--- a/index.html
+++ b/index.html
@@ -48,6 +48,17 @@
               <textarea id="event-info"></textarea>
             </div>
           </div>
+
+          <div class="input-wrapper">
+            <label for="event-category"
+              >Categoria</span></label
+            >
+            <select  id="event-category">
+              <option value="live">Ao vivo</option>
+              <option value="podcast">Podcast</option>
+              <option value="mentorship">Mentoria</option>
+            </select>
+          </div>
         </fieldset>
       </form>
     </div>
