Checkbox customizado e com acessibilidade

--- a/index.html
+++ b/index.html
@@ -78,7 +78,10 @@
               <input type="password" id="event-password" />
             </div>
 
-            <input type="checkbox" id="event-private" />
+            <div class="checkbox-wrapper">
+              <input type="checkbox" id="event-private" />
+              <label for="event-private">Evento privado</label>
+            </div>
           </div>
         </fieldset>
         <fieldset>
