Validando campos e submetendo formulários

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <h1>Crie e compartilhe seu evento.</h1>
         <p>O primeiro passo, é preencher esse formulário de inscrição</p>
       </header>
-      <form action="#">
+      <form id="form">
         <fieldset>
           <div class="fieldset-wrapper">
             <legend>Informações do Evento</legend>
@@ -26,7 +26,7 @@
               <label for="event-title"
                 >Título do evento <span>(mínimo 8 caracteres)</span></label
               >
-              <input type="text" id="event-title" />
+              <input required minlength="8" type="text" id="event-title" />
             </div>
 
             <div class="input-wrapper">
@@ -75,7 +75,12 @@
                 >Senha de acesso para os participantes
                 <span>(mínimo 8 caracteres)</span></label
               >
-              <input type="password" id="event-password" />
+              <input
+                required
+                minlength="8"
+                type="password"
+                id="event-password"
+              />
             </div>
 
             <div class="checkbox-wrapper">
@@ -106,7 +111,7 @@
         </fieldset>
       </form>
       <footer>
-        <input class="button" type="submit" value="Salvar evento" />
+        <input form="form" class="button" type="submit" value="Salvar evento" />
       </footer>
     </div>
   </body>
